[package]
name = "programming-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "html",
    "02_concurrency",
    "03_types",
    "04_ownership",
    "05_reference_safety",
    "06_error_handling",
    "09_structs",
    "10_enums",
    "11_traits",
    "12_overloading",
    "13_utility_traits",
    "14_closures",
    "15_iterators",
]

[dependencies]
